# mhai-project-examples

./: .gitmodules  README.md
cmake-project/basic-project/: CMakeLists.txt
cmake-project/basic-project/cmake/toolchains/: arm-gcc.cmake
cmake-project/basic-project/ldscript/: STM32F411RETx_FLASH.ld
cmake-project/basic-project/startup/: startup_stm32.s
gnu-arm-eclipse-project/EXTI_ToggleLedOnIT_CPP17/Release/: EXTI_ToggleLedOnIT_CPP17.hex  EXTI_ToggleLedOnIT_CPP17.map
gnu-arm-eclipse-project/EXTI_ToggleLedOnIT_CPP17/Release/HAL_Driver/Src/: stm32f4xx_hal_adc.d  stm32f4xx_hal_can.d  stm32f4xx_hal_crc.d  stm32f4xx_hal_dcmi_ex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_eth.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_fmpi2c_ex.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_hash_ex.d  stm32f4xx_hal_i2c.d  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_i2s_ex.d  stm32f4xx_hal_iwdg.d  stm32f4xx_hal_ltdc_ex.d  stm32f4xx_hal_mmc.d  stm32f4xx_hal_pccard.d  stm32f4xx_hal_pcd.d  stm32f4xx_hal_pwr_ex.d  (+12 more)
gnu-arm-eclipse-project/EXTI_ToggleLedOnIT_CPP17/Release/src/: stm32f4xx_it.d  subdir.mk
gnu-arm-eclipse-project/EXTI_ToggleLedOnIT_CPP17/Release/startup/: subdir.mk
gnu-arm-eclipse-project/EXTI_ToggleLedOnIT_CPP17/src/: main.cpp
gnu-arm-eclipse/EXTI_ToggleLedOnIT_CPP17/: .cproject  .directory  .project
gnu-arm-eclipse/EXTI_ToggleLedOnIT_CPP17/Release/: EXTI_ToggleLedOnIT_CPP17.elf  makefile  sources.mk
gnu-arm-eclipse/EXTI_ToggleLedOnIT_CPP17/Release/src/: main.d  system_stm32f4xx.d
gnu-arm-eclipse/EXTI_ToggleLedOnIT_CPP17/inc/: main.h
(+41 files in other folders)
